--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
   },
   "author": "Linus Niedermaier",
   "license": "MIT",
-  "dependencies": {
-    "object-assign": "4.1.0",
+  "dependencies": {    
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-redux": "5.0.1",
@@ -40,6 +39,38 @@
     "redux-thunk": "2.1.0" 
   },
   "devDependencies": {
+    "autoprefixer": "6.5.4",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.20.0",
+    "babel-eslint": "7.1.1",
+    "babel-jest": "18.0.0",
+    "babel-loader": "6.2.10",
+    "babel-plugin-transform-react-constant-elements": "6.9.1",
+    "babel-plugin-transform-react-remove-prop-types": "0.2.11",
+    "babel-polyfill": "6.20.0",
+    "babel-preset-latest": "6.16.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-1": "6.16.0",
+    "browser-sync": "2.18.5",
+    "enzyme": "2.6.0",
+    "eslint": "3.12.2",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-react": "6.8.0",
+    "eslint-watch": "2.1.14",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "2.24.1",
+    "jest": "18.1.0",
+    "node-sass": "4.0.0",
+    "npm-run-all": "3.1.2",
+    "react-addons-test-utils": "15.4.1",
+    "redux-immutable-state-invariant": "1.2.4",
+    "webpack": "2.2.1",
+    "webpack-bundle-analyzer": "2.1.1",
+    "webpack-dev-middleware": "1.9.0",
+    "webpack-hot-middleware": "2.13.2",
+    "webpack-md5-hash": "0.0.5"
   },
   "keywords": [],
   "repository": {
