--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "npm-run-all": "3.1.2",
     "react-addons-test-utils": "15.4.1",
     "redux-immutable-state-invariant": "1.2.4",
+    "sass-loader": "6.0.2",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
     "webpack": "2.2.1",
     "webpack-bundle-analyzer": "2.1.1",
     "webpack-dev-middleware": "1.9.0",
